fix calc screen overflow

--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@ main {
 }
 /* ======= Screen ======= */
 .calc-screen {
+  overflow: hidden;
   width: 100%;
   height: 100px;
   border-radius: 10px;
